--- a/Node_Projeto/package.json
+++ b/Node_Projeto/package.json
@@ -1,9 +1,15 @@
 {
-  "name": "Node_Projeto",
+  "name": "node",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.1"
+  },
+  "scripts": {
+    "dev": "nodemon index.js"
   }
 }
